--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -48,26 +48,17 @@
             menubar: false
         });
     </script>
+
+    <!-- Page Components -->
+    <script src="../components/header.js" type="text/javascript"></script>
+    <script src="../components/footer.js" type="text/javascript"></script>
 </head>
 
 <body>
     <!-- ======= Header ======= -->
-    <header id="header" class="header fixed-top">
-        <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-            <a href="../index.html" class="logo d-flex align-items-center">
-                <img src="../assets/img/logo.png" alt="PlayNFT" />
-            </a>
-
-            <nav id="navbar" class="navbar">
-                <ul>
-                    <li><a class="nav-link scrollto active" href="../index.html">Home</a></li>
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav>
-            <!-- .navbar -->
-        </div>
-    </header>
+    <header-component alternate_header="true"></header-component>
     <!-- End Header -->
+
     <div class="row spacer">&nbsp;</div>
     <main id="main">
         <!-- ======= Streamers Section ======= -->
@@ -82,6 +73,10 @@
         </section>
         <!-- ======= End Streamers Section ======= -->
     </main>
+
+    <!-- ======= Footer ======= -->
+    <footer-component></footer-component>
+    <!-- End Footer -->
 
     <!-- Vendor JS Files -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
