Streamer List update

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         <div class="profile mt-auto">
             <img
             src="${picture}"
-            class="testimonial-img" alt="">
+            class="testimonial-img" alt="${name}" onError="this.onerror=null;this.src='assets/img/twitch-v2.svg';">
             <h3>${name}</h3>
             <h4>${nfts} Tokens</h4>
 
