Token display draft

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 
         </div>
         <p>
-            <button type="submit" onclick="window.open('https://www.twitch.tv/${name}')">Visit Channel</button>
+            <button type="submit" onclick="window.open('https://www.twitch.tv/${name}')">Visit Channel <i class="ri-external-link-fill"></i></button>
         </p>
 
         </div>
