--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     referrerpolicy="origin"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-  <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
+  <script src="https://unpkg.com/moralis/dist/moralis.min.js"></script>
   <script src='https://unpkg.com/xrpl@2.1.0-beta.1'></script>
 
   <script>
