Combined creator and gamer services into NFT Utility

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           />
         </div>
         <div class="flex-grow-1 ms-3">
-          <strong>${tokenName}</strong>
+          <strong>${tokenName} (Collection Owner)</strong>
           <p>ID: ${tokenId}</p>
           <p>Total Supply: ${tokenSupply}</p>
           <div class="actions">
