--- a/collections/index.html
+++ b/collections/index.html
@@ -80,7 +80,7 @@
                     <div class="gy-4">
                       <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="creators-chain" id="creators-chain-enj"
-                          value="enj" checked>
+                          value="enj">
                         <label class="form-check-label" for="creators-chain-enj"><img style="width:50px"
                             src="/assets/img/enjin-coin-enj-logo.svg" alt="Enjin" /></label>
                       </div>
@@ -128,6 +128,11 @@
                       </div>
                     </div>
                     <div class="row spacer-20">&nbsp;</div>
+                    <div class="row gy-4 chain-wallet" id="creators-wallet">
+                        <div style="display:flex;flex-wrap: wrap;justify-content: center;">
+                            <div><h5>Select a coin to display collections.</h5></div>
+                        </div>
+                    </div>
                     <div class="row gy-4 chain-wallet" id="creators-wallet-enj">
                         <div id="games_list_enj" class="card-deck collections" style="display:flex;flex-wrap: wrap;justify-content: center;">
                         </div>
@@ -210,7 +215,7 @@
                     let response = jQuery.parseJSON(data);
 
                     $(".collections").empty();
-
+                    
                     response.forEach(function (val) {
 
                         if (val.content == null) val.content = 0;
@@ -221,6 +226,8 @@
 
                     });
 
+                    $("#creators-wallet").show()
+                    $("#creators-wallet-enj").hide()
                 },
                 error: function (data) {
                     console.info(data);
