--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
   <script src="https://unpkg.com/moralis/dist/moralis.min.js"></script>
   <script src='https://unpkg.com/xrpl@2.1.0-beta.1'></script>
+  <script src="https://unpkg.com/@web3auth/web3auth@latest/dist/web3auth.umd.min.js"></script>
 
   <script>
     tinymce.init({
