--- a/games/index.html
+++ b/games/index.html
@@ -256,7 +256,7 @@
   </script>
 
     <script id="creators-token-template" type="text/x-jquery-tmpl">
-    <li id="${tokenId}" data-image="${tokenImage}" class="list-group-item d-flex list-group-item-action games-creators-nft-item">
+    <li id="${tokenId}" data-image="${tokenImage}" data-supply="${tokenSupply}" class="list-group-item d-flex list-group-item-action games-creators-nft-item">
       <div class="flex-shrink-0 game-icon">
         <img
           id="image-${tokenId}"
