--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -63,12 +63,54 @@
     <main id="main">
         <!-- ======= Streamers Section ======= -->
         <section id="section-streamers" class="gamers">
-            <div class="container text-center">
+            <div class="container">
                 <header class="section-header">
-                    <h2>Playground Plans</h2>
-                    <p>Roadmap</p>
+
+                    <h2>Q3 Roadmap</h2>
+                    <p id="games_name">Building the future of NFT Utility</p>
                 </header>
-                <img class="img-fluid" src="../assets/img/roadmap.png">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="main-timeline">
+                            <div class="timeline">
+                                <a href="#" class="timeline-content">
+                                    <div class="timeline-icon"><i class="fa fa-gamepad"></i></div>
+                                    <h3 class="title">PlayNFT Arcade</h3>
+                                    <p class="description">
+                                        Our first Play to Earn feature. Use your NFTs to play card games and compete for prizes and cash rewards.
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="timeline">
+                                <a href="#" class="timeline-content">
+                                    <div class="timeline-icon"><i class="fa fa-youtube"></i></div>    
+                                    <h3 class="title">YouTube NFTs</h3>
+                                    <p class="description">
+                                        YouTube streamers will now be able to create and distribute NFTs using our Streamer service!
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="timeline">
+                                <a href="#" class="timeline-content">
+                                    <div class="timeline-icon"><i class="fa fa-shield-halved"></i></div>
+                                    <h3 class="title">Battlegrounds</h3>
+                                    <p class="description">
+                                        PvP Blockchain and NFT Project battles with cash prizes and bragging rights on the line. Which Blockchain has the best gamers?
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="timeline">
+                                <a href="#" class="timeline-content">
+                                    <div class="timeline-icon"><i class="fa-brands fa-tiktok"></i></div>
+                                    <h3 class="title">TikTok Video NFTs</h3>
+                                    <p class="description">
+                                        Adding the ability for TikTok videos to be created as rare NFTs and distributed using our Streamer service.
+                                    </p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- ======= End Streamers Section ======= -->
