--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -77,7 +77,7 @@
                                     <div class="timeline-icon"><i class="fa fa-gamepad"></i></div>
                                     <h3 class="title">PlayNFT Arcade</h3>
                                     <p class="description">
-                                        Our first Play to Earn feature. Use your NFTs to play card games and compete for prizes and cash rewards.
+                                        Our first Play to Earn feature. Use your NFTs to play arcade games and compete for prizes and cash rewards.
                                     </p>
                                 </a>
                             </div>
